--- a/package.json
+++ b/package.json
@@ -71,6 +71,7 @@
     "core-js": "^3.6.5",
     "flyio": "^0.6.2",
     "image-tools": "^1.4.0",
+    "jsonwebtoken": "^9.0.0",
     "uuid": "^9.0.0",
     "uview-ui": "^2.0.31",
     "vue": "^2.6.11",
